cluster/kubernetes/apps/observability/gatus/ingress/gatus-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-ingress
  namespace: observability
  labels:
    route-label: external-dns-internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: gatus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus
          port: 8080
